feat(governance): add M2 validation orchestration
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)
